// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ship API service addAppContact posts a new app contact 1`] = `
Object {
  "email": "josh@bend.er",
  "isConfirmed": false,
  "notificationPreferences": Object {
    "failedPublish": false,
    "newVersion": true,
    "successfulPublish": true,
  },
}
`;

exports[`Ship API service confirmEmail calls the API with the confirm token 1`] = `
Object {
  "app": Object {
    "appSlug": "app-slug",
    "id": "app-id",
  },
  "appContact": Object {
    "email": "some-email",
    "id": "app-contact-id",
    "notificationPreferences": Object {
      "failedPublish": false,
      "newVersion": true,
      "successfulPublish": false,
    },
  },
}
`;

exports[`Ship API service deleteFeatureGraphic calls the api 1`] = `undefined`;

exports[`Ship API service deleteScreenshot calls the api 1`] = `undefined`;

exports[`Ship API service getApp fetches a version for an app 1`] = `
Object {
  "androidErrors": undefined,
  "appSlug": "such-a-nice-app",
  "colors": Object {
    "end": "blue",
    "start": "red",
  },
  "iosErrors": Array [],
}
`;

exports[`Ship API service getAppVersion fetches a version for an app 1`] = `
Object {
  "appName": "App title",
  "appSlug": "an-app-slug",
  "buildNumber": "456",
  "description": "A description",
  "iconUrl": "icon.url",
  "id": 123,
  "publicInstallPageURL": "def.a.valid.url",
  "publicInstallPageUrl": undefined,
  "shortDescription": "A short description",
  "supportedDeviceTypes": Array [],
  "whatsNew": "Something new",
}
`;

exports[`Ship API service getAppVersionEvents fetches the events for an app version 1`] = `
Array [
  Object {
    "createdAtTimestamp": 1570665600000,
    "id": "an-id",
    "isLogAvailable": true,
    "logDownloadUrl": "http://log.url",
    "status": "in_progress",
    "text": "some-string",
    "updatedAtTimestamp": 1570752000000,
  },
]
`;

exports[`Ship API service getAppVersionList fetches a list of versions for an app 1`] = `
Array [
  Object {
    "appInfo": Object {
      "app_icon_url": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
      "title": "An app",
    },
    "appName": "An app",
    "appSlug": "an-app-slug",
    "buildNumber": "456",
    "iconUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "id": 123,
  },
]
`;

exports[`Ship API service getFeatureGraphic fetches the feature graphic for an app 1`] = `
Object {
  "createdAt": "2019-09-26T12:42:31Z",
  "downloadUrl": "some.url",
  "filename": "screenshot-1.jpg",
  "filesize": 1234,
  "id": "test-id-1",
  "updatedAt": "2019-09-27T12:42:31Z",
  "uploaded": true,
}
`;

exports[`Ship API service getScreenshots fetches screenshots of an app 1`] = `
Array [
  Object {
    "createdAt": 2018-09-26T12:42:31.000Z,
    "deviceType": "iPhone 6.5”",
    "downloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "filename": "screenshot-1.jpg",
    "filesize": 1000,
    "id": "test-id-1",
    "screenSize": "1024x768",
    "updatedAt": 2018-09-27T12:42:31.000Z,
    "uploaded": true,
  },
]
`;

exports[`Ship API service getSettings fetches settings for an app 1`] = `
Object {
  "androidSettings": Object {
    "module": "",
    "selectedServiceAccount": "service_account_file-2",
  },
  "certificates": Array [
    Object {
      "name": "code_signing_identity-1",
      "slug": "code_signing_identity-slug-1",
    },
    Object {
      "name": "code_signing_identity-2",
      "slug": "code_signing_identity-slug-2",
    },
  ],
  "iosSettings": Object {
    "selectedAppStoreProvisioningProfile": "provisioning_profile-1",
    "selectedAppStoreProvisioningProfiles": Array [],
    "selectedCodeSigningIdentity": "code_signing_identity-2",
  },
  "keystoreFiles": Array [
    Object {
      "name": "keystore_file-1",
      "slug": "keystore_file-slug-1",
    },
    Object {
      "name": "keystore_file-2",
      "slug": "keystore_file-slug-2",
    },
  ],
  "projectType": "other",
  "provProfiles": Array [
    Object {
      "name": "provisioning_profile-1",
      "slug": "provisioning_profile-slug-1",
    },
    Object {
      "name": "provisioning_profile-2",
      "slug": "provisioning_profile-slug-2",
    },
  ],
  "serviceAccountJsonFiles": Array [
    Object {
      "name": "service_account_file-1",
      "slug": "service_account_file-slug-1",
    },
    Object {
      "name": "service_account_file-2",
      "slug": "service_account_file-slug-2",
    },
  ],
}
`;

exports[`Ship API service getTestDevices fetches test devices for an app 1`] = `
Array [
  Object {
    "deviceId": "some-device-id-01",
    "deviceType": "ios",
    "owner": "test-user-1",
  },
  Object {
    "deviceId": "some-device-id-02",
    "deviceType": "android",
    "owner": "test-user-1",
  },
  Object {
    "deviceId": "some-device-id-03",
    "deviceType": "ios",
    "owner": "test-user-2",
  },
]
`;

exports[`Ship API service listAppContacts fills isConfimed properly 1`] = `
Array [
  Object {
    "email": "not confirmed 1",
    "isConfirmed": false,
  },
  Object {
    "email": "not confirmed 2",
    "isConfirmed": false,
  },
  Object {
    "email": "not confirmed 3",
    "isConfirmed": false,
  },
  Object {
    "email": "confirmed",
    "isConfirmed": true,
  },
]
`;

exports[`Ship API service listAppContacts lists all app contacts 1`] = `
Array [
  Object {
    "email": "aaa",
    "isConfirmed": false,
    "notificationPreferences": Object {
      "newVersion": true,
    },
  },
  Object {
    "email": "bbb",
    "isConfirmed": false,
  },
  Object {
    "email": "ccc",
    "isConfirmed": false,
  },
]
`;

exports[`Ship API service updateAppContactNotificationPreferences updates an app contact's notification preferences 1`] = `
Object {
  "id": "abc-123",
  "isConfirmed": false,
  "notificationPreferences": Object {
    "failedPublish": false,
    "newVersion": true,
    "successfulPublish": false,
  },
}
`;

exports[`Ship API service updateAppVersion updates a version for an app 1`] = `
Object {
  "appSlug": "an-app-slug",
  "buildNumber": "456",
  "description": "A description",
  "id": 123,
  "publicInstallPageURL": undefined,
  "publicInstallPageUrl": undefined,
  "shortDescription": "A short description",
  "supportedDeviceTypes": Array [],
  "whatsNew": "Something new",
}
`;

exports[`Ship API service updateSettings updates settings for an app 1`] = `
Object {
  "androidSettings": Object {
    "module": "",
    "selectedKeystoreFile": "keystore-filename",
    "selectedServiceAccount": "service-account-filename",
    "track": "Release",
  },
  "androidWorkflow": "All",
  "certificates": Array [],
  "iosSettings": Object {
    "appSku": "Fill",
    "appSpecificPassword": "Fill",
    "appleDeveloperAccountEmail": "some.email@addr.ess",
    "includeBitCode": true,
    "selectedAppStoreProvisioningProfile": "prov-profile-id",
    "selectedAppStoreProvisioningProfiles": Array [],
    "selectedCodeSigningIdentity": "code-signing-identity-id",
  },
  "iosWorkflow": "All",
  "keystoreFiles": Array [],
  "provProfiles": Array [],
  "serviceAccountJsonFiles": Array [],
}
`;

exports[`Ship API service uploadFeatureGraphic calls the api 1`] = `
Object {
  "filename": "some-file.png",
  "uploadUrl": "http://some.url?token=123",
}
`;

exports[`Ship API service uploadScreenshots calls the api 1`] = `
Array [
  Object {
    "filename": "some-file.png",
    "uploadUrl": "http://some.url?token=123",
  },
]
`;
